Fixed alignment enough for demo

--- a/src/components/Modal/Modal.module.sass
+++ b/src/components/Modal/Modal.module.sass
@@ -27,7 +27,7 @@
 .outer
   position: relative
   width: 100%
-  max-width: 448px
+  //max-width: 448px
   margin: auto
   padding: 32px
   background: $neutrals8
@@ -38,6 +38,7 @@
     box-shadow: inset 0 0 0 1px $neutrals3
 
 .container
+  width: 100%
 
 .close
   position: absolute
